<resources>
    <string name="app_name">FBLA-Look</string>
    <string name="action_settings">Settings</string>

    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="title_activity_user_list">UserList</string>
    <string name="share">Share</string>
    <string name="title_activity_starter">Starter</string>
    <string name="title_activity_user_feed">UserFeed</string>
    <string name="enter_name">Enter Username</string>
    <string name="enter_code">Enter Passcode</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="click_text">Seasame Open!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="username_register">Username</string>
    <string name="useremail_register">E-Mail</string>
    <string name="button_register">Register</string>
    <string name="userpassword_register">Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="register_label">Register!</string>
    <string name="login_label">Login!</string>
    <string name="create_account">Create Account!</string>
    <string name="or">OR</string>
    <string name="logo_descript">app_logo</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
